@@ -1,3 +1,8 @@
+2004-10-18  Eric B. Weddington <ericw@evcohs.com>
+
+    * include/avr/iom169.h: Add compatibility defines to previous releases for
+    OCR1A[L/H] and OCR1B[L/H]. [Bug #9708]
+
 2004-09-21  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* libc/stdio/vfscanf.c: fix parsing of multiple
